Fix styling for photo list user info

--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -41,8 +41,11 @@
   font-weight: 700;
   font-size: 12px;
   margin-left: 8px;
+  margin-bottom: 0;
 }
 
 .photo-list__user-location {
   color: #838383;
+  font-weight: 400;
+  margin-top: 0;
 }
